Playlist functionality added

--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NotABadPlayer</string>
+    <string name="app_name">Not Bad Player</string>
     <string name="title_albums">Albums</string>
     <string name="title_playlists">Lists</string>
     <string name="title_search">Search</string>
