--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_search">Search</string>
     <string name="title_recent">Recent</string>
     <string name="title_settings">Settings</string>
+
+    <string name="title_unknown">Unknown</string>
 </resources>
