--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -6,5 +6,12 @@
     <string name="title_recent">Recent</string>
     <string name="title_settings">Settings</string>
 
+    <!-- Albums tab -->
     <string name="title_unknown">Unknown</string>
+    
+    <!-- Search tab -->
+    <string name="search_hint">Search for track</string>
+    <string name="search_results_tip">search results</string>
+    <string name="search_results_tip_no_results">no results</string>
+    
 </resources>
