--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="tracks">tracks</string>
     <string name="total_duration">duration</string>
     
+    <!-- Player tab -->
+    <string name="nothing_playing">Nothing playing</string>
+    <string name="zero_timer">0:00</string>
+    <string name="timer_separator">/</string>
+    
     <!-- Search tab -->
     <string name="search_hint">Search for track</string>
     <string name="search_results_tip">search results</string>
@@ -31,6 +36,7 @@
     <string name="settings_keybind_player_play">Player Play</string>
     <string name="settings_keybind_player_next">Player Next</string>
     <string name="settings_keybind_player_prev">Player Previous</string>
+    <string name="settings_keybind_player_recall">Player Recall</string>
     <string name="settings_keybind_qplayer_volume_up">QPlayer Volume Up</string>
     <string name="settings_keybind_qplayer_volume_down">QPlayer Volume Down</string>
     <string name="settings_keybind_qplayer_play">QPlayer Play</string>
@@ -41,6 +47,6 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.0 (1)</string>
-    <string name="about_release_date">Released 2019.03.7</string>
+    <string name="about_release_date">Released 2019.03.9</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
 </resources>
