Added support to detect app version change; more internal fixes; more code cleanup

--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -76,4 +76,7 @@
     
     <!-- Errors -->
     <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
+    
+    <!-- Storage version -->
+    <string name="storage_version">1.0</string>
 </resources>
