--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="settings_keybind_player_next">Player Next</string>
     <string name="settings_keybind_player_prev">Player Previous</string>
     <string name="settings_keybind_player_recall">Player Recall</string>
+    <string name="settings_keybind_player_swipe_left">Player Swipe L</string>
+    <string name="settings_keybind_player_swipe_right">Player Swipe R</string>
     <string name="settings_keybind_qplayer_volume_up">QPlayer Volume Up</string>
     <string name="settings_keybind_qplayer_volume_down">QPlayer Volume Down</string>
     <string name="settings_keybind_qplayer_play">QPlayer Play</string>
@@ -71,12 +73,12 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.5 (8)</string>
-    <string name="about_release_date">Released 2019.05.6</string>
+    <string name="about_release_date">Released 2019.05.12</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
     
     <!-- Errors -->
     <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
     
     <!-- Storage version -->
-    <string name="storage_version">1.0</string>
+    <string name="storage_version">1.1</string>
 </resources>
