--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -73,12 +73,15 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.5 (8)</string>
-    <string name="about_release_date">Released 2019.05.17</string>
+    <string name="about_release_date">Released 2019.05.19</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
     
     <!-- Errors -->
+    <string name="error">Error</string>
     <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
+    <string name="error_invalid_file">Invalid file.</string>
+    <string name="error_invalid_file_play">Cannot play file.</string>
     
     <!-- Storage version -->
-    <string name="storage_version">1.1</string>
+    <string name="storage_version">1.2</string>
 </resources>
