Fixed storage version migration - previously the migration from older versions was not being evaluated properly; added an option to pick if the player screen should pop up when playing a track from a list

--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="settings_track_sorting">Track Sorting</string>
     <string name="settings_stars">Show Stars</string>
     <string name="settings_volume_bar">Show Volume Bar</string>
+    <string name="settings_open_player_on_play">Play opens player</string>
     <string name="settings_keybinds">Key binds</string>
     <string name="settings_keybinds_action">Action</string>
     <string name="settings_keybinds_command">Command</string>
@@ -84,5 +85,5 @@
     <string name="error_invalid_file_play">Cannot play file.</string>
     
     <!-- Storage version -->
-    <string name="storage_version">1.2</string>
+    <string name="storage_version">1.3</string>
 </resources>
