--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="search_hint">Search for track</string>
     <string name="search_results_tip">search results</string>
     <string name="search_results_tip_no_results">no results</string>
+    <string name="search_hint_searching">Searching...</string>
 
     <!-- Settings tab -->
     <string name="settings_appearance">Appearance</string>
@@ -75,7 +76,7 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.6 (9)</string>
-    <string name="about_release_date">Released 2019.05.30</string>
+    <string name="about_release_date">Released 2019.05.31</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
     
     <!-- Errors -->
