--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
     <string name="settings_keybind_player_recall">Player Recall</string>
     <string name="settings_keybind_player_swipe_left">Player Swipe L</string>
     <string name="settings_keybind_player_swipe_right">Player Swipe R</string>
-    <string name="settings_keybind_player_volume">Player Speaker Icon</string>
+    <string name="settings_keybind_player_volume">Player Speaker</string>
     <string name="settings_keybind_qplayer_volume_up">QPlayer Volume Up</string>
     <string name="settings_keybind_qplayer_volume_down">QPlayer Volume Down</string>
     <string name="settings_keybind_qplayer_play">QPlayer Play</string>
@@ -77,7 +77,7 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.6 (9)</string>
-    <string name="about_release_date">Released 2019.05.31</string>
+    <string name="about_release_date">Released 2019.06.1</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
     
     <!-- Errors -->
