--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
+    <!-- Application is running event -->
+    <string name="broadcast_application_is_running">Broadcast.ApplicationIsRunning</string>
+
+    <!-- General -->
     <string name="app_name">Not Bad Player</string>
     <string name="ok">Ok</string>
     <string name="yes">Yes</string>
@@ -77,7 +81,7 @@
     <!-- About -->
     <string name="about">About</string>
     <string name="about_version">Version 1.6 (9)</string>
-    <string name="about_release_date">Released 2019.06.6</string>
+    <string name="about_release_date">Released 2019.06.8</string>
     <string name="about_credits">Programmed, designed &amp; tested by Kristiyan Butev</string>
 
     <!-- Notification -->
