--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -97,7 +97,10 @@
     <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
     <string name="error_invalid_file">Invalid file.</string>
     <string name="error_invalid_file_play">Cannot play file.</string>
-    
+
+    <!-- Toasts -->
+    <string name="toast_device_library_changed">Device library changed in the background.</string>
+
     <!-- Storage version -->
     <string name="storage_version">1.3</string>
 </resources>
