Display text indicating that no tracks are present on the device when no tracks are detected

--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="error_need_storage_permission">You cannot use the player without giving read storage permissions!</string>
     <string name="error_invalid_file">Invalid file.</string>
     <string name="error_invalid_file_play">Cannot play file.</string>
+    <string name="error_no_tracks_on_device">No tracks were found on your device</string>
 
     <!-- Toasts -->
     <string name="toast_device_library_changed">Device library changed in the background.</string>
