--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
-    <!-- Application is running event -->
+    <!-- - - - - -
+        Constants
+    - - - - - -->
+
+    <!-- Events -->
     <string name="broadcast_application_is_running">Broadcast.ApplicationIsRunning</string>
+
+    <!-- Storage -->
+    <string name="storage_version">1.4</string>
+
+    <!-- - - - - -
+        Text
+    - - - - - -->
 
     <!-- General -->
     <string name="app_name">Not Bad Player</string>
@@ -104,7 +115,4 @@
 
     <!-- Toasts -->
     <string name="toast_device_library_changed">Device library changed in the background.</string>
-
-    <!-- Storage version -->
-    <string name="storage_version">1.3</string>
 </resources>
