Implemented recently added tracks list

--- a/NotABadPlayer/app/src/main/res/values/strings.xml
+++ b/NotABadPlayer/app/src/main/res/values/strings.xml
@@ -47,7 +47,8 @@
     <string name="playlist_dialog_invalid_name">Please enter a valid playlist name</string>
     <string name="playlist_dialog_taken_name">Playlist name is already taken</string>
 
-    <string name="playlist_name_recently_played">Recently Played</string>
+    <string name="playlist_name_history">Recently played</string>
+    <string name="playlist_name_recently_added">Recently added</string>
     <string name="playlist_name_previously_played">Previously Played</string>
     <string name="playlist_name_search_results">Search Results</string>
     
